Fixed scrolling on mobile version on unsubscribe-page

--- a/src/resources/sass/pages/_unsubscribe-page.scss
+++ b/src/resources/sass/pages/_unsubscribe-page.scss
@@ -187,7 +187,7 @@ body {
 
  body {
 	min-height: calc( var(--app-height) - 35px)!important;
-    height: calc( var(--app-height) - 35px)!important;
+   /* height: calc( var(--app-height) - 35px)!important; */
  }
 
  body .page-front .content-wrapper_middle .unsbc-block {
